--- a/requestList.html
+++ b/requestList.html
@@ -8,6 +8,9 @@
 
 <body>
     <button id="showRequestsBtn" type="button" name="button">Reload</button>
+    <input id="filter" placeholder="Filter" />
+    <input id="errorsOnly" type="checkbox" />
+    <label for="errorsOnly">Errors only</label>
     <table class="requestTable">
         <thead>
             <tr>
