add save mocks button

--- a/requestList.html
+++ b/requestList.html
@@ -11,6 +11,7 @@
     <input id="filter" placeholder="Filter" />
     <input id="errorsOnly" type="checkbox" />
     <label for="errorsOnly">Errors only</label>
+    <button id="saveMocksBtn">Save mocks</button>
     <table class="requestTable">
         <thead>
             <tr>
@@ -31,7 +32,9 @@
 
         </tbody>
     </table>
+    <script src="jszip.js"></script>
     <script src="requestList.js"></script>
+    <script src="saveMocks.js"></script>
 </body>
 
 </html>
